--- a/OffshoreTrack/Views/Permissao/Edit.cshtml
+++ b/OffshoreTrack/Views/Permissao/Edit.cshtml
@@ -23,7 +23,7 @@
                 <form asp-action="Update" method="post">
                     <input type="hidden" asp-for="id_permissao" />
                     <div class="form-group">
-                        <label asp-for="nome_permissao" class="control-label"></label>
+                        <label class="control-label">Permissão:</label>
                         <input asp-for="nome_permissao" class="form-control" />
                     </div>
                     <br>
