--- a/OffshoreTrack/Views/Shared/_Layout.cshtml
+++ b/OffshoreTrack/Views/Shared/_Layout.cshtml
@@ -229,6 +229,7 @@
                     <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Permissao" asp-action="Index">Configuração de Permisão</a></li>
                     <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Status" asp-action="Index">Configuração de Status</a></li>
                     <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="FormaPagamento" asp-action="Index">Configuração de Formas de Pagamento</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Moeda" asp-action="Index">Configuração de Moedas</a></li>
 
                     <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Empresa" asp-action="Edit">Atualização dos dados da Empresa</a></li>
 
